# libcmdline

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  cl.drone.io.sh
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  cmdline.c  cmdline.h  cmdline_option.c  cmdline_parser.c  cmdline_struct.c  cmdline_struct.h  cmdline_utils.c  cmdline_utils.h
ut/: CMakeLists.txt  test.cpp
ut/option/: CMakeLists.txt  cmdline_option.cpp  option_test.hpp
ut/parser/: CMakeLists.txt  cmdline_parser.cpp  parser_test.hpp
